--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
     <header>
         <img src="img1/Logo.png" alt="logo">
@@ -54,7 +53,11 @@
             <p>м. Київ, пр-т Лесі Українки, 26</p>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2536.8109882828862!2d30.435938676064822!3d50.51908358242032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d29b9e369069%3A0xff64663a5fd75cd5!2z0YPQuy4g0JvQtdGB0Lgg0KPQutGA0LDQuNC90LrQuCwgMjYsINCa0LjQtdCyLCDQo9C60YDQsNC40L3QsCwgMDIwMDA!5e0!3m2!1sru!2sde!4v1712833868280!5m2!1sru!2sde"
-                width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                width="200" 
+                height="200" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
